# mm-base2

./: Cargo.toml  justfile
src/: api_method.rs  asset.rs  auth.rs  config.rs  error.rs  jinja.rs  lib.rs  log.rs  router.rs  state.rs  system.rs
src/templates/base2/: base.html
